# aliphysics-lite

./: CMakeLists.txt  README.md  aliphysics-lite-config.cmake
corrfw/: CMakeLists.txt  aliphysics-lite-corrfw-linkdef.h
muon/: AddTaskMuMu.C  AddTaskMuMuMinv.C  AliMuonTrackCuts.cxx  CMakeLists.txt  aliphysics-lite-muon-linkdef.h  runMuMu.C
muondep/: AliAnalysisMuMuFnorm.h  AliAnalysisMuMuResult.cxx  AliAnalysisTriggerScalers.cxx  AliAnalysisTriggerScalers.h  CMakeLists.txt  aliphysics-lite-muondep-linkdef.h
oadb/: CMakeLists.txt
oadb/base/: CMakeLists.txt  aliphysics-lite-oadb-base-linkdef.h
oadb/multiplicity/: AliOADBMultSelection.cxx  CMakeLists.txt  aliphysics-lite-oadb-multiplicity-linkdef.h
